--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -794,3 +794,85 @@ eprint = {https://doi.org/10.1177/1073858413494269}
   year={2008},
   publisher={Nature Publishing Group}
 }
+
+@article{damasio-carvalho-2013,
+  title={The nature of feelings: evolutionary and neurobiological origins},
+  author={Damasio, Antonio and Carvalho, Gil B},
+  journal={Nature reviews neuroscience},
+  volume={14},
+  number={2},
+  pages={143},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
+@book{dsm-5,
+  title={Diagnostic and statistical manual of mental disorders ({DSM-5}{\textregistered})},
+  author={{American Psychiatric Association}},
+  year={2013},
+  publisher={American Psychiatric Pub}
+}
+
+@book{icd-10,
+  title={International statistical classification of diseases and related health problems},
+  author={{World Health Organization}},
+  volume={1},
+  year={2004},
+  edition={10},
+  publisher={World Health Organization}
+}
+
+@article{tracy-et-al-2015,
+  title={The nonverbal communication of emotions},
+  author={Tracy, Jessica L and Randles, Daniel and Steckler, Conor M},
+  journal={Current opinion in behavioral sciences},
+  volume={3},
+  pages={25--30},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@Inbook{fessler-gervais-2010,
+author="Fessler, Daniel M. T.
+and Gervais, Matthew",
+editor="Kappeler, Peter M.
+and Silk, Joan",
+title="From Whence the Captains of Our Lives: Ultimate and Phylogenetic Perspectives on Emotions in Humans and Other Primates",
+bookTitle="Mind the Gap: Tracing the Origins of Human Universals",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="261--280",
+isbn="978-3-642-02725-3",
+doi="10.1007/978-3-642-02725-3_12",
+url="https://doi.org/10.1007/978-3-642-02725-3_12"
+}
+
+@article{donath-2007,
+  title={Signals, cues and meaning},
+  author={Donath, Judith},
+  journal={Unpublished Manuscript. Massachusetts Institute of Technology, Cambridge, MA},
+  url = {http://smg.media.mit.edu/classes/IdentitySignals06/SignalingDraft.pdf},
+  year={2007}
+}
+
+@article{laidre-johnstone-2013,
+  title={Animal signals},
+  author={Laidre, Mark E and Johnstone, Rufus A},
+  journal={Current Biology},
+  volume={23},
+  number={18},
+  pages={R829--R833},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{mitchell-phillips-2015,
+  title={The overlapping relationship between emotion perception and theory of mind},
+  author={Mitchell, Rachel LC and Phillips, Louise H},
+  journal={Neuropsychologia},
+  volume={70},
+  pages={1--10},
+  year={2015},
+  publisher={Elsevier}
+}
