--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -876,3 +876,76 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
   year={2015},
   publisher={Elsevier}
 }
+
+@article{chalmers-1995,
+  title={Facing up to the problem of consciousness},
+  author={Chalmers, David J},
+  journal={Journal of consciousness studies},
+  volume={2},
+  number={3},
+  pages={200--219},
+  year={1995},
+  publisher={Imprint Academic}
+}
+
+@article{oizumi-et-al-2014,
+  title={From the phenomenology to the mechanisms of consciousness: integrated information theory 3.0},
+  author={Oizumi, Masafumi and Albantakis, Larissa and Tononi, Giulio},
+  journal={PLoS computational biology},
+  volume={10},
+  number={5},
+  pages={e1003588},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
+@book{gazzaniga-ivry-2013,
+  title={Cognitive Neuroscience: The Biology of the Mind: Fourth International Student Edition},
+  author={Gazzaniga, Michael and Ivry, Richard B},
+  year={2013},
+  publisher={WW Norton}
+}
+
+@book{albert-et-al-2018,
+  title={The Oxford handbook of 4E cognition},
+  author={Newen, Albert and De Bruin, Leon and Gallagher, Shaun},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@book{russell-fernández-1997,
+  title={The psychology of facial expression},
+  author={Russell, James A and Dols, Jos{\'e} Miguel Fern{\'a}ndez},
+  volume={131},
+  year={1997},
+  publisher={Cambridge university press Cambridge}
+}
+
+@book{fridlund-2014,
+  title={Human facial expression: An evolutionary view},
+  author={Fridlund, Alan J},
+  year={2014},
+  publisher={Academic Press}
+}
+
+@article{simon-et-al-2006,
+  title={Brain responses to dynamic facial expressions of pain},
+  author={Simon, Daniela and Craig, Kenneth D and Miltner, Wolfgang HR and Rainville, Pierre},
+  journal={Pain},
+  volume={126},
+  number={1-3},
+  pages={309--318},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{simon-et-al-2008,
+  title={Recognition and discrimination of prototypical dynamic expressions of pain and emotions},
+  author={Simon, Daniela and Craig, Kenneth D and Gosselin, Frederic and Belin, Pascal and Rainville, Pierre},
+  journal={PAIN{\textregistered}},
+  volume={135},
+  number={1-2},
+  pages={55--64},
+  year={2008},
+  publisher={Elsevier}
+}
