figures/paradigm_state_diagram: fix node image

--- a/source/figures/paradigm_state_diagram/paradigm_state_diagram.tex
+++ b/source/figures/paradigm_state_diagram/paradigm_state_diagram.tex
@@ -25,7 +25,7 @@
     \node[state] (blank)[below right=0cm and 1cm of 😏*] {\;\;\;};
     \node[state] (+2neutral)[right of=blank] {+};
     \node[state] (😐2)[right of=+2neutral]             {\includegraphics[width=.035\textwidth]{neutral.eps}}; %neutral
-    \node[state] (😐*)[right of=😐2]                     {\includegraphics[width=.035\textwidth]{neutral-gaze.eps}*}; %neutral null
+    \node[state] (😐*)[right of=😐2]                     {\includegraphics[width=.035\textwidth]{neutral.eps}*}; %neutral null
 
     \node[state] (😒**)[below of=*😏]   {\;\includegraphics[width=.035\textwidth]{sad-gaze.eps}*}; %sad congruent
     \node[state] (😒averted)[below left=0cm and 1cm of 😒**] {\includegraphics[width=.035\textwidth]{sad-gaze.eps}};         %sad averted
