--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -35,7 +35,7 @@ month={Jul}}
 }
 
 @article{phan-et-al-2002,
-  title={Functional neuroanatomy of emotion: a meta-analysis of emotion activation studies in PET and fMRI},
+  title={Functional neuroanatomy of emotion: a meta-analysis of emotion activation studies in {PET} and {fMRI}},
   author={Phan, K Luan and Wager, Tor and Taylor, Stephan F and Liberzon, Israel},
   journal={Neuroimage},
   volume={16},
@@ -144,7 +144,7 @@ month={Jul}}
 }
 
 @article{lewis-peacock-norman-2013,
-  title={Multi-voxel pattern analysis of fMRI data},
+  title={Multi-voxel pattern analysis of {fMRI} data},
   author={Lewis-Peacock, Jarrod A and Norman, Kenneth A},
   journal={The cognitive neurosciences},
   pages={911--920},
@@ -162,7 +162,7 @@ month={Jul}}
 }
 
 @article{norman-et-al-2006,
-  title={Beyond mind-reading: multi-voxel pattern analysis of fMRI data},
+  title={Beyond mind-reading: multi-voxel pattern analysis of {fMRI} data},
   author={Norman, Kenneth A and Polyn, Sean M and Detre, Greg J and Haxby, James V},
   journal={Trends in cognitive sciences},
   volume={10},
@@ -906,7 +906,7 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
   publisher={WW Norton}
 }
 
-@book{albert-et-al-2018,
+@book{newen-et-al-2018,
   title={The Oxford handbook of 4E cognition},
   author={Newen, Albert and De Bruin, Leon and Gallagher, Shaun},
   year={2018},
@@ -948,4 +948,482 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
   pages={55--64},
   year={2008},
   publisher={Elsevier}
+}
+
+@article{tottenham-et-al-2009,
+  title={The NimStim set of facial expressions: judgments from untrained research participants},
+  author={Tottenham, Nim and Tanaka, James W and Leon, Andrew C and McCarry, Thomas and Nurse, Marcella and Hare, Todd A and Marcus, David J and Westerlund, Alissa and Casey, BJ and Nelson, Charles},
+  journal={Psychiatry research},
+  volume={168},
+  number={3},
+  pages={242--249},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{ekman-1976,
+  title={Pictures of facial affect},
+  author={Ekman, Paul},
+  journal={Consulting Psychologists Press},
+  year={1976},
+  publisher={Palo Alto}
+}
+
+@book{damasio-1999,
+  title={The feeling of what happens: Body and emotion in the making of consciousness},
+  author={Damasio, Antonio R},
+  year={1999},
+  publisher={Houghton Mifflin Harcourt}
+}
+
+@article{seth-2013,
+  title={Interoceptive inference, emotion, and the embodied self},
+  author={Seth, Anil K},
+  journal={Trends in cognitive sciences},
+  volume={17},
+  number={11},
+  pages={565--573},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{slaby-2014,
+  title={Emotions and the extended mind},
+  author={Slaby, Jan},
+  journal={Collective emotions},
+  pages={32--46},
+  year={2014},
+  publisher={Oxford University Press Oxford, UK}
+}
+
+@article{harrison-et-al-2010,
+  title={The embodiment of emotional feelings in the brain},
+  author={Harrison, Neil A and Gray, Marcus A and Gianaros, Peter J and Critchley, Hugo D},
+  journal={Journal of Neuroscience},
+  volume={30},
+  number={38},
+  pages={12878--12884},
+  year={2010},
+  publisher={Soc Neuroscience}
+}
+
+@book{penny-et-al-2011,
+  title={Statistical parametric mapping: the analysis of functional brain images},
+  author={Penny, William D and Friston, Karl J and Ashburner, John T and Kiebel, Stefan J and Nichols, Thomas E},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{friston-et-al-1994,
+  title={Statistical parametric maps in functional imaging: a general linear approach},
+  author={Friston, Karl J and Holmes, Andrew P and Worsley, Keith J and Poline, J-P and Frith, Chris D and Frackowiak, Richard SJ},
+  journal={Human brain mapping},
+  volume={2},
+  number={4},
+  pages={189--210},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
+@article{kober-et-al-2008,
+  title={Functional grouping and cortical--subcortical interactions in emotion: a meta-analysis of neuroimaging studies},
+  author={Kober, Hedy and Barrett, Lisa Feldman and Joseph, Josh and Bliss-Moreau, Eliza and Lindquist, Kristen and Wager, Tor D},
+  journal={Neuroimage},
+  volume={42},
+  number={2},
+  pages={998--1031},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{shamay-et-all-2009,
+  title={Two systems for empathy: a double dissociation between emotional and cognitive empathy in inferior frontal gyrus versus ventromedial prefrontal lesions},
+  author={Shamay-Tsoory, Simone G and Aharon-Peretz, Judith and Perry, Daniella},
+  journal={Brain},
+  volume={132},
+  number={3},
+  pages={617--627},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{zaki-ochsner-2012,
+  title={The neuroscience of empathy: progress, pitfalls and promise},
+  author={Zaki, Jamil and Ochsner, Kevin N},
+  journal={Nature neuroscience},
+  volume={15},
+  number={5},
+  pages={675},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@article{calder-et-al-2001,
+  title={Neuropsychology of fear and loathing},
+  author={Calder, Andrew J and Lawrence, Andrew D and Young, Andrew W},
+  journal={Nature Reviews Neuroscience},
+  volume={2},
+  number={5},
+  pages={352},
+  year={2001},
+  publisher={Nature Publishing Group}
+}
+
+@article{sander-et-al-2003,
+  title={The human amygdala: an evolved system for relevance detection},
+  author={Sander, David and Grafman, Jordan and Zalla, Tiziana},
+  journal={Reviews in the Neurosciences},
+  volume={14},
+  number={4},
+  pages={303--316},
+  year={2003},
+  publisher={De Gruyter}
+}
+
+@article{michel-et-al-2019,
+  title={Opportunities and challenges for a maturing science of consciousness},
+  author={Michel, Matthias and Beck, Diane and Block, Ned and Blumenfeld, Hal and Brown, Richard and Carmel, David and Carrasco, Marisa and Chirimuuta, Mazviita and Chun, Marvin and Cleeremans, Axel and others},
+  journal={Nature human behaviour},
+  volume={3},
+  number={2},
+  pages={104},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{tononi-koch-2015,
+  title={Consciousness: here, there and everywhere?},
+  author={Tononi, Giulio and Koch, Christof},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={370},
+  number={1668},
+  pages={20140167},
+  year={2015},
+  publisher={The Royal Society}
+}
+
+@article{friston-2010,
+  title={The free-energy principle: a unified brain theory?},
+  author={Friston, Karl},
+  journal={Nature reviews neuroscience},
+  volume={11},
+  number={2},
+  pages={127},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{mahmoudi-et-al-2012,
+  title={Multivoxel pattern analysis for FMRI data: a review},
+  author={Mahmoudi, Abdelhak and Takerkart, Sylvain and Regragui, Fakhita and Boussaoud, Driss and Brovelli, Andrea},
+  journal={Computational and mathematical methods in medicine},
+  volume={2012},
+  year={2012},
+  publisher={Hindawi}
+}
+
+@article{haynes-rees-2005,
+  title={Predicting the stream of consciousness from activity in human visual cortex},
+  author={Haynes, John-Dylan and Rees, Geraint},
+  journal={Current Biology},
+  volume={15},
+  number={14},
+  pages={1301--1307},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{polyn-et-al-2005,
+  title={Category-specific cortical activity precedes retrieval during memory search},
+  author={Polyn, Sean M and Natu, Vaidehi S and Cohen, Jonathan D and Norman, Kenneth A},
+  journal={Science},
+  volume={310},
+  number={5756},
+  pages={1963--1966},
+  year={2005},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{hernandez-et-al-2017,
+  title={Tactile object categories can be decoded from the parietal and lateral-occipital cortices},
+  author={Hern{\'a}ndez-P{\'e}rez, Ra{\'u}l and Cuaya, Laura V and Rojas-Hortelano, Eduardo and Reyes-Aguilar, Azalea and Concha, Luis and De Lafuente, Victor},
+  journal={Neuroscience},
+  volume={352},
+  pages={226--235},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{skerry-saxe-2015,
+  title={Neural representations of emotion are organized around abstract event features},
+  author={Skerry, Amy E and Saxe, Rebecca},
+  journal={Current biology},
+  volume={25},
+  number={15},
+  pages={1945--1954},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{wegrzyn-et-al-2015,
+  title={Investigating the brain basis of facial expression perception using multi-voxel pattern analysis},
+  author={Wegrzyn, Martin and Riehle, Marcel and Labudda, Kirsten and Woermann, Friedrich and Baumgartner, Florian and Pollmann, Stefan and Bien, Christian G and Kissler, Johanna},
+  journal={Cortex},
+  volume={69},
+  pages={131--140},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{schirmer-adolphs-2017,
+  title={Emotion perception from face, voice, and touch: comparisons and convergence},
+  author={Schirmer, Annett and Adolphs, Ralph},
+  journal={Trends in cognitive sciences},
+  volume={21},
+  number={3},
+  pages={216--228},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{bechara-et-al-2000,
+  title={Emotion, decision making and the orbitofrontal cortex},
+  author={Bechara, Antoine and Damasio, Hanna and Damasio, Antonio R},
+  journal={Cerebral cortex},
+  volume={10},
+  number={3},
+  pages={295--307},
+  year={2000},
+  publisher={Oxford University Press}
+}
+
+
+@article{seth-2010,
+  title={The grand challenge of consciousness},
+  author={Seth, Anil K},
+  journal={Frontiers in psychology},
+  volume={1},
+  pages={5},
+  year={2010},
+  publisher={Frontiers}
+}
+
+@article{tsuchiya-adolphs-2007,
+  title={Emotion and consciousness},
+  author={Tsuchiya, Naotsugu and Adolphs, Ralph},
+  journal={Trends in cognitive sciences},
+  volume={11},
+  number={4},
+  pages={158--167},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@book{millon-davis-1996,
+  title={Disorders of personality: DSM-IV and beyond},
+  author={Millon, Theodore and Davis, Roger O},
+  year={1996},
+  publisher={John Wiley \& Sons}
+}
+
+@article{berrios-1993,
+  title={European views on personality disorders: a conceptual history},
+  author={Berrios, German E},
+  journal={Comprehensive Psychiatry},
+  volume={34},
+  number={1},
+  pages={14--30},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{hurlemann-et-al-2007,
+  title={Amygdala control of emotion-induced forgetting and remembering: evidence from Urbach-Wiethe disease},
+  author={Hurlemann, Ren{\'e} and Wagner, Michael and Hawellek, Barbara and Reich, Harald and Pieperhoff, Peter and Amunts, Katrin and Oros-Peusquens, Ana-Maria and Shah, Nadim J and Maier, Wolfgang and Dolan, Raymond J},
+  journal={Neuropsychologia},
+  volume={45},
+  number={5},
+  pages={877--884},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@book{russell-norvig-2009,
+  author = {Russell, Stuart J. and Norvig, Peter},
+  title = {Artificial Intelligence: A Modern Approach},
+  year = {2009},
+  isbn = {0137903952},
+  edition = {3},
+  publisher = {Pearson Education},
+  pages = "693--767"
+}
+
+@article{bechara-et-al-2001,
+  title={Insensitivity to future consequences following damage to human prefrontal},
+  author={Bechara, Antoine and Damasio, Antonio R and Damasio, Hanna},
+  journal={The Science of Mental Health: Personality and personality disorder},
+  volume={50},
+  pages={287},
+  year={2001},
+  publisher={Psychology Press}
+}
+
+@article{rohrer-et-al-2011,
+  title={Clinical and neuroanatomical signatures of tissue pathology in frontotemporal lobar degeneration},
+  author={Rohrer, Jonathan D and Lashley, Tammaryn and Schott, Jonathan M and Warren, Jane E and Mead, Simon and Isaacs, Adrian M and Beck, Jonathan and Hardy, John and de Silva, Rohan and Warrington, Elizabeth and others},
+  journal={Brain},
+  volume={134},
+  number={9},
+  pages={2565--2581},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@article{marlowe-et-al-1975,
+  title={Complete {K}l{\"u}ver-{B}ucy syndrome in man},
+  author={Marlowe, Wendy B and Mancall, Elliott L and Thomas, Joseph J},
+  journal={Cortex},
+  volume={11},
+  number={1},
+  pages={53--59},
+  year={1975},
+  publisher={Elsevier}
+}
+
+@article{torralva-et-al-2009,
+  title={A neuropsychological battery to detect specific executive and social cognitive impairments in early frontotemporal dementia},
+  author={Torralva, Teresa and Roca, Mar{\'\i}a and Gleichgerrcht, Ezequiel and Bekinschtein, Tristan and Manes, Facundo},
+  journal={Brain},
+  volume={132},
+  number={5},
+  pages={1299--1309},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{ellis-et-al-1997,
+  title={Reduced autonomic responses to faces in Capgras delusion},
+  author={Ellis, Hadyn D and Young, Andrew W and Quayle, Angela H and De Pauw, Karel W},
+  journal={Proceedings of the Royal Society of London. Series B: Biological Sciences},
+  volume={264},
+  number={1384},
+  pages={1085--1092},
+  year={1997},
+  publisher={The Royal Society}
+}
+
+@article{ramachandran-1998,
+  title={Consciousness and body image: lessons from phantom limbs, Capgras syndrome and pain asymbolia},
+  author={Ramachandran, VS},
+  journal={Philosophical Transactions of the Royal Society of London. Series B: Biological Sciences},
+  volume={353},
+  number={1377},
+  pages={1851--1859},
+  year={1998},
+  publisher={The Royal Society}
+}
+
+@article{rubinov-sporns-2010,
+  title={Complex network measures of brain connectivity: uses and interpretations},
+  author={Rubinov, Mikail and Sporns, Olaf},
+  journal={Neuroimage},
+  volume={52},
+  number={3},
+  pages={1059--1069},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{porter-ten_brinke-2008,
+  title={Reading between the lies: Identifying concealed and falsified emotions in universal facial expressions},
+  author={Porter, Stephen and Ten Brinke, Leanne},
+  journal={Psychological science},
+  volume={19},
+  number={5},
+  pages={508--514},
+  year={2008},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{ekman-2003,
+  title={Darwin, deception, and facial expression},
+  author={Ekman, Paul},
+  journal={Annals of the New York Academy of Sciences},
+  volume={1000},
+  number={1},
+  pages={205--221},
+  year={2003},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{isen-patrick-1983,
+  title={The effect of positive feelings on risk taking: When the chips are down},
+  author={Isen, Alice M and Patrick, Robert},
+  journal={Organizational behavior and human performance},
+  volume={31},
+  number={2},
+  pages={194--202},
+  year={1983},
+  publisher={Elsevier}
+}
+
+@article{schwarz-clore-2003,
+  title={Mood as information: 20 years later},
+  author={Schwarz, Norbert and Clore, Gerald L},
+  journal={Psychological inquiry},
+  volume={14},
+  number={3-4},
+  pages={296--303},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@article{haxby-et-al-2000,
+  title={The distributed human neural system for face perception},
+  author={Haxby, James V and Hoffman, Elizabeth A and Gobbini, M Ida},
+  journal={Trends in cognitive sciences},
+  volume={4},
+  number={6},
+  pages={223--233},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{haist-anzures-2017,
+  title={Functional development of the brain's face-processing system},
+  author={Haist, Frank and Anzures, Gizelle},
+  journal={Wiley Interdisciplinary Reviews: Cognitive Science},
+  volume={8},
+  number={1-2},
+  pages={e1423},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{tsao-livingstone-2008,
+  title={Mechanisms of face perception},
+  author={Tsao, Doris Y and Livingstone, Margaret S},
+  journal={Annu. Rev. Neurosci.},
+  volume={31},
+  pages={411--437},
+  year={2008},
+  publisher={Annual Reviews}
+}
+
+@article{tsao-et-al-2006,
+  title={A cortical region consisting entirely of face-selective cells},
+  author={Tsao, Doris Y and Freiwald, Winrich A and Tootell, Roger BH and Livingstone, Margaret S},
+  journal={Science},
+  volume={311},
+  number={5761},
+  pages={670--674},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
+
+@electronic{lewis-2013,
+  author        = "Lewis, Tania",
+  title         = "Oldest Fossils Reveal When Apes & Monkeys First Diverged",
+  url           = "https://www.livescience.com/32029-oldest-monkey-fossil-found.html",
+  year          = "2013"
 }
